--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -64,6 +64,11 @@
     top: -25px;
     right: -20px;
   }
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/background@2x.jpg");
+    background-size: 280px auto;
+  }
 }
 
 .additional-goods__gift-text {
@@ -171,6 +176,11 @@
 
     &::after {
       background-color: #d9d9d900;
+    }
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/background-tablet@2x.jpg");
+      background-size: 707px auto;
     }
   }
 
