--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -186,45 +186,80 @@
 }
 
 .catalog__500-chicken {
-  background: url("../img/catalog/catalog-pro-500-chicken.png");
+  background: url("../img/catalog/catalog-pro-500-chicken-mobile.png");
   width: 68px;
   height: 86px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/catalog-pro-500-chicken-mobile@2x.png");
+    background-size: 68px auto;
+  }
 }
 
 .catalog__1000-chicken {
-  background: url("../img/catalog/catalog-pro-1000-chicken.png");
+  background: url("../img/catalog/catalog-pro-1000-chicken-mobile.png");
   width: 84px;
   height: 100px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/catalog-pro-1000-chicken-mobile@2x.png");
+    background-size: 84px auto;
+  }
 }
 
 .catalog__500-fish {
-  background: url("../img/catalog/catalog-pro-500-fish.png");
+  background: url("../img/catalog/catalog-pro-500-fish-mobile.png");
   width: 68px;
   height: 78px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/catalog-pro-500-fish-mobile@2x.png");
+    background-size: 68px auto;
+  }
 }
 
 .catalog__1000-fish {
-  background: url("../img/catalog/catalog-pro-1000-fish.png");
+  background: url("../img/catalog/catalog-pro-1000-fish-mobile.png");
   width: 84px;
   height: 100px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/catalog-pro-1000-fish-mobile@2x.png");
+    background-size: 84px auto;
+  }
 }
 
 .catalog__500-buckwheat {
-  background: url("../img/catalog/catalog-slim-500-buckwheat.png");
+  background: url("../img/catalog/catalog-slim-500-buckwheat-mobile.png");
   width: 68px;
   height: 78px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/catalog-slim-500-buckwheat-mobile@2x.png");
+    background-size: 68px auto;
+  }
 }
 
 .catalog__1000-buckwheat {
-  background: url("../img/catalog/catalog-slim-1000-buckwheat.png");
+  background: url("../img/catalog/catalog-slim-1000-buckwheat-mobile.png");
   width: 84px;
   height: 100px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/catalog-slim-1000-buckwheat-mobile@2x.png");
+    background-size: 84px auto;
+  }
 }
 
 .catalog__500-rice {
-  background: url("../img/catalog/catalog-slim-500-rice.png");
+  background: url("../img/catalog/catalog-slim-500-rice-mobile.png");
   width: 68px;
   height: 78px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/catalog-slim-500-rice-mobile@2x.png");
+    background-size: 68px auto;
+  }
 }
 
 .catalog__title-card-link {
@@ -389,42 +424,77 @@
     background: url("../img/catalog/catalog-pro-500-chicken-tablet.png");
     width: 161px;
     height: 172px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/catalog-pro-500-chicken-tablet@2x.png");
+      background-size: 161px auto;
+    }
   }
 
   .catalog__1000-chicken {
     background: url("../img/catalog/catalog-pro-1000-chicken-tablet.png");
     width: 168px;
     height: 200px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/catalog-pro-1000-chicken-tablet@2x.png");
+      background-size: 168px auto;
+    }
   }
 
   .catalog__500-fish {
     background: url("../img/catalog/catalog-pro-500-fish-tablet.png");
     width: 163px;
     height: 174px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/catalog-pro-500-fish-tablet@2x.png");
+      background-size: 163px auto;
+    }
   }
 
   .catalog__1000-fish {
     background: url("../img/catalog/catalog-pro-1000-fish-tablet.png");
     width: 168px;
     height: 200px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/catalog-pro-1000-fish-tablet@2x.png");
+      background-size: 168px auto;
+    }
   }
 
   .catalog__500-buckwheat {
     background: url("../img/catalog/catalog-slim-500-buckwheat-tablet.png");
     width: 161px;
     height: 171px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/catalog-slim-500-buckwheat-tablet@2x.png");
+      background-size: 161px auto;
+    }
   }
 
   .catalog__1000-buckwheat {
     background: url("../img/catalog/catalog-slim-1000-buckwheat-tablet.png");
     width: 168px;
     height: 200px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/catalog-slim-1000-buckwheat-tablet@2x.png");
+      background-size: 168px auto;
+    }
   }
 
   .catalog__500-rice {
     background: url("../img/catalog/catalog-slim-500-rice-tablet.png");
     width: 163px;
     height: 174px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/catalog-slim-500-rice-tablet@2x.png");
+      background-size: 163px auto;
+    }
   }
 }
 
