--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -17,6 +17,15 @@
   list-style-type: none;
 }
 
+.how-it-works__image {
+  width: 60px;
+  height: 60px;
+  background-color: #68b738;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .how-it-works__title {
   font-family: "Oswald", sans-serif;
   font-size: 36px;
@@ -29,6 +38,7 @@
 .how-it-works__description {
   margin: 0;
   margin-left: 20px;
+  width: 200px;
 }
 
 .how-it-works__item:not(:last-child) {
