--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -25,22 +25,14 @@
   }
 }
 
-.main-footer__items {
-  &:hover path {
-    fill: #68b738;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
-}
-
 .main-footer__logo-image {
   display: block;
   margin: auto;
+  fill: #666666;
 
   &:hover {
     opacity: 0.6;
+    fill: #68b738;
   }
 
   &:active {
@@ -67,7 +59,9 @@
 }
 
 .main-footer__html-logo {
-  &:hover path {
+  fill: #666666;
+
+  &:hover {
     fill: #68b738;
   }
 
