--- a/source/less/blocks/type-program.less
+++ b/source/less/blocks/type-program.less
@@ -20,6 +20,29 @@
   padding-bottom: 22px;
 }
 
+.type-program__item-image {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-color: #68b738;
+  border-radius: 50%;
+  margin-top: 24px;
+  margin-left: 22px;
+  margin-bottom: 10px;
+}
+
+.type-program__item-icon-weight-loss {
+  position: absolute;
+  top: -2px;
+  left: 9px;
+}
+
+.type-program__item-icon-weight-gain {
+  position: absolute;
+  top: 9px;
+  left: -9px;
+}
+
 .type-program__title {
   font-family: "Oswald", sans-serif;
   font-size: 24px;
@@ -101,6 +124,27 @@
     margin-left: 54px;
   }
 
+  .type-program__item-image {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 430px;
+    top: 60px;
+  }
+
+  .type-program__item-icon-weight-loss {
+    width: 140px;
+    height: 194px;
+    left: 43px;
+  }
+
+  .type-program__item-icon-weight-gain {
+    width: 268px;
+    height: 112px;
+    left: -35px;
+    top: 45px;
+  }
+
   .type-program__image-weight_gain {
     order: 2;
     width: 268px;
@@ -165,8 +209,13 @@
   }
 
   .type-program__title {
+    position: absolute;
     font-size: 36px;
     line-height: 36px;
+    left: 200px;
+    top: 80px;
+    margin: 0;
+    width: 206px;
   }
 
   .type-program__info {
@@ -178,18 +227,41 @@
     width: 457px;
     height: 72px;
     top: 170px;
-    left: -155px;
   }
 
   .type-program__transition-catalog {
     font-size: 20px;
     line-height: 30px;
     position: absolute;
-    left: -155px;
     top: 270px;
+  }
+
+  .type-program__transition-catalog span {
+    width: 110px;
   }
 
   .type-program__icon {
     margin-top: 8px;
+  }
+
+  .type-program__item-image {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    left: 30px;
+    top: 20px;
+  }
+
+  .type-program__item-icon-weight-loss {
+    width: 70px;
+    height: 97px;
+    left: 20px;
+  }
+
+  .type-program__item-icon-weight-gain {
+    width: 134px;
+    height: 56px;
+    left: -15px;
+    top: 25px;
   }
 }
